# dashboard

./: .gitignore  .repotasks.json  NOTES.md  README.md  ecosystem.config.cjs  package.json  todos.md
backend/: Cargo.toml
backend/src/: main.rs  models.rs  notes.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.svelte  app.css
frontend/src/components/: Bookmarks.svelte  BookmarksPanel.svelte  Clock.svelte  EntryRow.svelte  HardwarePanel.svelte  Hero.svelte  MetricCard.svelte  PortsPanel.svelte  ProjectsPanel.svelte  Sidebar.svelte  Sparkline.svelte  Stats.svelte  StoragePanel.svelte  Todos.svelte  WallpaperPicker.svelte  WallpaperStage.svelte
frontend/src/lib/: api.js
frontend_safari/: index.html  package-lock.json
frontend_safari/public/: manifest.json
frontend_safari/src/: app.css
frontend_safari/src/components/: Bookmarks.svelte  Clock.svelte  Stats.svelte  Todos.svelte
qwenapp-old/: qwenapp.txt
qwenapp-old/dashboard-frontend/: README.md  package-lock.json  package.json
qwenapp-old/dashboard-frontend/src/app/: globals.css  layout.tsx  page.tsx
qwenapp-old/dashboard-frontend/src/app/api/hardware/: route.ts
scripts/: build.mjs
